<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:layout_width="195dp"
            android:layout_height="44dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.122"
            app:layout_constraintVertical_bias="0.068" android:id="@+id/txt_view_title"
            android:text="@string/txt_view_title" android:textSize="20sp"/>
    <TextView
            android:text="@string/txt_view_subtitle"
            android:layout_width="132dp"
            android:layout_height="36dp" android:id="@+id/text_view1"
            app:layout_constraintTop_toBottomOf="@+id/txt_view_title"
            android:layout_marginTop="40dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="40dp"
            android:textSize="14sp"/>
    <TextView
            android:text="@string/txt_view_subtitle1"
            android:layout_width="145dp"
            android:layout_height="39dp" android:id="@+id/text_view2"
            app:layout_constraintTop_toBottomOf="@+id/text_view1" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="44dp" android:layout_marginStart="32dp"/>
    <Button
            android:text="@string/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button_start"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="36dp" android:layout_marginStart="160dp" android:onClick="Options"/>
    <RadioGroup
            android:layout_width="363dp"
            android:layout_height="109dp"
            tools:layout_editor_absoluteX="35dp"
            android:id="@+id/radioGroup" app:layout_constraintTop_toBottomOf="@+id/text_view2"
            android:layout_marginTop="44dp">
        <RadioButton
                android:text="@string/option_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/add"/>
        <RadioButton
                android:text="@string/option_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/subtraction"/>
    </RadioGroup>
    <TextView
            android:layout_width="342dp"
            android:layout_height="38dp" android:id="@+id/txt_result"
            app:layout_constraintTop_toBottomOf="@+id/button_start"
            android:layout_marginTop="44dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextNumber"
            app:layout_constraintStart_toEndOf="@+id/text_view1" android:layout_marginStart="24dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="128dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextNumber2"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
            app:layout_constraintStart_toEndOf="@+id/text_view2" android:layout_marginTop="36dp"
            android:layout_marginStart="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>